--- a/gridcapa-swe-runner-spring-boot-starter/pom.xml
+++ b/gridcapa-swe-runner-spring-boot-starter/pom.xml
@@ -5,14 +5,20 @@
     <parent>
         <artifactId>gridcapa-swe</artifactId>
         <groupId>com.farao-community.farao</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>gridcapa-swe-runner-spring-boot-starter</artifactId>
     <name>GridCapa SWE runner service client SpringBoot starter</name>
     <description>Starter to be used in Spring application to use SWE capacity calculation</description>
+    <version>0.1</version>
     <packaging>jar</packaging>
+
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <!-- Compile dependencies -->
