clean target repo

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@
 
 # BlueJ files
 *.ctxt
-
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -23,3 +22,8 @@
 hs_err_pid*
 
 *.iml
+*/target/*
+.settings/
+.project
+.classpath
+/target
