--- a/gridcapa-swe-runner-app/pom.xml
+++ b/gridcapa-swe-runner-app/pom.xml
@@ -24,16 +24,20 @@
         </plugins>
     </build>
 
-    <properties>
-
-    </properties>
-
     <dependencies>
         <!-- Compile dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>gridcapa-swe-runner-api</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.farao-community.farao</groupId>
+            <artifactId>gridcapa-swe-preprocess-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.farao-community.farao</groupId>
+            <artifactId>gridcapa-swe-preprocess-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
