--- a/pom.xml
+++ b/pom.xml
@@ -45,13 +45,14 @@
 
     <properties>
         <awaitility.version>3.0.0</awaitility.version>
-        <farao.dependencies.version>1.4.0</farao.dependencies.version>
+        <farao.dependencies.version>1.5.1</farao.dependencies.version>
         <gridcapa.task-manager.version>1.6.0</gridcapa.task-manager.version>
         <jackson.datatype.version>2.13.4</jackson.datatype.version>
         <jsonapi.converter.version>0.11</jsonapi.converter.version>
         <logstash.version>7.0.1</logstash.version>
         <sonar.organization>farao-community</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <swe.preprocess.version>0.0.1-SNAPSHOT</swe.preprocess.version>
     </properties>
 
     <dependencyManagement>
@@ -61,6 +62,16 @@
                 <groupId>com.farao-community.farao</groupId>
                 <artifactId>gridcapa-task-manager-api</artifactId>
                 <version>${gridcapa.task-manager.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.farao-community.farao</groupId>
+                <artifactId>gridcapa-swe-preprocess-api</artifactId>
+                <version>${swe.preprocess.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.farao-community.farao</groupId>
+                <artifactId>gridcapa-swe-preprocess-starter</artifactId>
+                <version>${swe.preprocess.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.datatype</groupId>
