--- a/gridcapa-swe-runner-app/src/main/resources/application.yml
+++ b/gridcapa-swe-runner-app/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 logback:
   amqp:
-    exchange: swe-idcc-task-manager-logs-exchange
+    exchange: swe-d2cc-task-manager-logs-exchange
     routing-key: "#"
 spring:
   application:
-    name: swe-idcc-runner
+    name: swe-d2cc-runner
   rabbitmq:
     host: localhost
     port: 5672
@@ -20,17 +20,13 @@ spring:
         binder: rabbit
       bindings:
         interrupt-in-0:
-          destination: swe-idcc-stop-task
+          destination: swe-d2cc-stop-task
         request-in-0:
-          destination: swe-idcc-request
+          destination: swe-d2cc-request
         request-out-0:
-          destination: swe-idcc-response
+          destination: swe-d2cc-response
         task-status-update:
-          destination: swe-idcc-task-status-updated
-
-swe-preprocess:
-  binding:
-    destination: swe-preprocess-request
+          destination: swe-d2cc-task-status-updated
 
 swe-runner:
   whitelist:
@@ -38,7 +34,7 @@ swe-runner:
 
 minio-adapter:
   bucket: gridcapa
-  base-path: /SWE/IDCC
+  base-path: /SWE/D2CC
   access-key: gridcapa
   secret-key: gridcapa
   url: http://minio:9000
