--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+.idea
+*.iml
+target
+*/target
 # Compiled class file
 *.class
 
@@ -6,6 +10,7 @@
 
 # BlueJ files
 *.ctxt
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -20,10 +25,3 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
-*.iml
-*/target/*
-.settings/
-.project
-.classpath
-/target
