--- a/gridcapa-swe-runner-app/src/main/resources/application.yml
+++ b/gridcapa-swe-runner-app/src/main/resources/application.yml
@@ -29,6 +29,7 @@ spring:
           destination: swe-d2cc-task-status-updated
 
 swe-runner:
+  boundary-location: /home/farao/.itools/cgmes/boundary/
   whitelist:
     - http://localhost:9000/
 
