--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,8 @@
 
     <properties>
         <awaitility.version>3.0.0</awaitility.version>
-        <farao.dependencies.version>1.5.1</farao.dependencies.version>
+        <farao.dependencies.version>1.5.2</farao.dependencies.version>
+        <gridcapa.starter.minio.version>0.2.0</gridcapa.starter.minio.version>
         <gridcapa.task-manager.version>1.6.0</gridcapa.task-manager.version>
         <jackson.datatype.version>2.13.4</jackson.datatype.version>
         <jsonapi.converter.version>0.11</jsonapi.converter.version>
@@ -65,13 +66,13 @@
             </dependency>
             <dependency>
                 <groupId>com.farao-community.farao</groupId>
-                <artifactId>gridcapa-swe-preprocess-api</artifactId>
+                <artifactId>gridcapa-swe-preprocess-starter</artifactId>
                 <version>${swe.preprocess.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.farao-community.farao</groupId>
-                <artifactId>gridcapa-swe-preprocess-starter</artifactId>
-                <version>${swe.preprocess.version}</version>
+                <artifactId>gridcapa-starter-minio-adapter</artifactId>
+                <version>${gridcapa.starter.minio.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.datatype</groupId>
