--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
         <jsonapi.converter.version>0.11</jsonapi.converter.version>
         <logstash.version>7.0.1</logstash.version>
         <powsybl.core.version>4.10.1</powsybl.core.version>
+        <powsybl.entsoe.version>1.7.0-SNAPSHOT</powsybl.entsoe.version>
         <sonar.organization>farao-community</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
@@ -78,6 +79,26 @@
                 <groupId>com.github.jasminb</groupId>
                 <artifactId>jsonapi-converter</artifactId>
                 <version>${jsonapi.converter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-glsk-commons</artifactId>
+                <version>${powsybl.entsoe.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-glsk-document-api</artifactId>
+                <version>${powsybl.entsoe.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-glsk-document-cim</artifactId>
+                <version>${powsybl.entsoe.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-iidm-modification</artifactId>
+                <version>${powsybl.core.version}</version>
             </dependency>
 
             <!-- Runtime dependencies -->
