Add copyright and author

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
             <organization>RTE</organization>
             <organizationUrl>http://www.rte-france.com</organizationUrl>
         </developer>
+        <developer>
+            <name>Ameni WALHA</name>
+            <email>ameni.walha@rte-france.com</email>
+            <organization>RTE</organization>
+            <organizationUrl>http://www.rte-france.com</organizationUrl>
+        </developer>
     </developers>
 
     <properties>
