--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
     <properties>
         <awaitility.version>3.0.0</awaitility.version>
         <farao.dependencies.version>1.6.0</farao.dependencies.version>
+        <farao.dichotomy.version>4.5.0</farao.dichotomy.version>
         <gridcapa.starter.minio.version>0.2.0</gridcapa.starter.minio.version>
         <gridcapa.task-manager.version>1.7.0</gridcapa.task-manager.version>
         <jackson.datatype.version>2.13.4</jackson.datatype.version>
@@ -66,6 +67,16 @@
     <dependencyManagement>
         <dependencies>
             <!-- Compile dependencies -->
+            <dependency>
+                <groupId>com.farao-community.farao</groupId>
+                <artifactId>farao-dichotomy-api</artifactId>
+                <version>${farao.dichotomy.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.farao-community.farao</groupId>
+                <artifactId>farao-dichotomy-shift</artifactId>
+                <version>${farao.dichotomy.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.farao-community.farao</groupId>
                 <artifactId>gridcapa-task-manager-api</artifactId>
