--- a/pom.xml
+++ b/pom.xml
@@ -52,15 +52,13 @@
     <properties>
         <awaitility.version>3.0.0</awaitility.version>
         <farao.dependencies.version>1.6.1</farao.dependencies.version>
-        <farao.dichotomy.version>4.6.0</farao.dichotomy.version>
+        <farao.dichotomy.version>4.7.0-SNAPSHOT</farao.dichotomy.version>
         <gridcapa.starter.minio.version>0.2.0</gridcapa.starter.minio.version>
         <gridcapa.task-manager.version>1.7.0</gridcapa.task-manager.version>
-        <gridcapa.rao.runner.version>1.6.1</gridcapa.rao.runner.version>
+        <gridcapa.rao.runner.version>1.7.0-SNAPSHOT</gridcapa.rao.runner.version>
         <jackson.datatype.version>2.13.4</jackson.datatype.version>
         <jsonapi.converter.version>0.11</jsonapi.converter.version>
         <logstash.version>7.0.1</logstash.version>
-        <powsybl.core.version>4.10.1</powsybl.core.version>
-        <powsybl.entsoe.version>1.6.1</powsybl.entsoe.version>
         <sonar.organization>farao-community</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
