--- a/gridcapa-swe-runner-app/src/test/resources/application.yml
+++ b/gridcapa-swe-runner-app/src/test/resources/application.yml
@@ -13,22 +13,26 @@ swe-runner:
         min-value: 0
         max-value: 6400
         precision: 50
-        tolerance: 10
+        tolerance-Es-Fr: 10
+        tolerance-Es-Pt: 50
       FR_ES:
         min-value: 0
         max-value: 6400
         precision: 50
-        tolerance: 10
+        tolerance-Es-Fr: 10
+        tolerance-Es-Pt: 50
       ES_PT:
         min-value: 0
         max-value: 6400
         precision: 50
-        tolerance: 50
+        tolerance-Es-Fr: 50
+        tolerance-Es-Pt: 10
       PT_ES:
         min-value: 0
         max-value: 6400
         precision: 50
-        tolerance: 50
+        tolerance-Es-Fr: 50
+        tolerance-Es-Pt: 10
   whitelist:
     - http://localhost:9000/
     - file:/
