--- a/gridcapa-swe-runner-app/src/main/resources/application.yml
+++ b/gridcapa-swe-runner-app/src/main/resources/application.yml
@@ -59,6 +59,7 @@ swe-runner:
     - http://localhost:9000/
     - http://minio:9000/
     - file:/
+  zone-id: "Europe/Paris"
 
 rao-runner-server:
   amqp:
