--- a/pom.xml
+++ b/pom.xml
@@ -57,8 +57,8 @@
 
     <properties>
         <awaitility.version>3.0.0</awaitility.version>
-        <farao.dependencies.version>1.7.2-SNAPSHOT</farao.dependencies.version>
-        <farao.dichotomy.version>4.6.0</farao.dichotomy.version>
+        <farao.dependencies.version>1.8.1-SNAPSHOT</farao.dependencies.version>
+        <farao.dichotomy.version>4.8.0-SNAPSHOT</farao.dichotomy.version>
         <gridcapa.starter.minio.version>0.2.0</gridcapa.starter.minio.version>
         <gridcapa.rao.runner.version>1.8.0-SNAPSHOT</gridcapa.rao.runner.version>
         <gridcapa.task-manager.version>1.9.0</gridcapa.task-manager.version>
