add missing configuration for interrupting run

--- a/gridcapa-swe-runner-app/src/main/resources/application.yml
+++ b/gridcapa-swe-runner-app/src/main/resources/application.yml
@@ -23,6 +23,8 @@ spring:
           destination: swe-d2cc-response
         task-status-update:
           destination: swe-d2cc-task-status-updated
+        stop-rao:
+          destination: stop-rao-runner
 
 logback:
   amqp:
