--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
     <properties>
         <awaitility.version>3.0.0</awaitility.version>
         <farao.dependencies.version>1.8.1</farao.dependencies.version>
-        <farao.dichotomy.version>4.8.0</farao.dichotomy.version>
+        <farao.dichotomy.version>4.8.1-SNAPSHOT</farao.dichotomy.version>
         <gridcapa.starter.minio.version>0.2.0</gridcapa.starter.minio.version>
         <gridcapa.rao.runner.version>1.8.0</gridcapa.rao.runner.version>
         <gridcapa.task-manager.version>1.9.0</gridcapa.task-manager.version>
