--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,10 @@
     <properties>
         <awaitility.version>3.0.0</awaitility.version>
         <farao.dependencies.version>1.8.1</farao.dependencies.version>
-        <farao.dichotomy.version>4.8.1-SNAPSHOT</farao.dichotomy.version>
+        <farao.dichotomy.version>4.8.0</farao.dichotomy.version>
         <gridcapa.starter.minio.version>0.2.0</gridcapa.starter.minio.version>
-        <gridcapa.rao.runner.version>1.8.0</gridcapa.rao.runner.version>
-        <gridcapa.task-manager.version>1.9.0</gridcapa.task-manager.version>
+        <gridcapa.rao.runner.version>1.8.1-SNAPSHOT</gridcapa.rao.runner.version>
+        <gridcapa.task-manager.version>1.10.0-SNAPSHOT</gridcapa.task-manager.version>
         <jackson.datatype.version>2.13.4</jackson.datatype.version>
         <jsonapi.converter.version>0.11</jsonapi.converter.version>
         <logstash.version>7.0.1</logstash.version>
