--- a/gridcapa-swe-runner-app/src/main/resources/application.yml
+++ b/gridcapa-swe-runner-app/src/main/resources/application.yml
@@ -19,6 +19,7 @@ spring:
           destination: swe-d2cc-stop-task
         request-in-0:
           destination: swe-d2cc-request
+          group: swe-d2cc-runner
         request-out-0:
           destination: swe-d2cc-response
         task-status-update:
@@ -33,6 +34,7 @@ logback:
 
 swe-runner:
   zone-id: "Europe/Paris"
+  shift-max-iteration-number: 20
   dichotomy:
     parameters:
       ES_FR:
