Applying shift to merging view

--- a/gridcapa-swe-runner-app/src/main/resources/application.yml
+++ b/gridcapa-swe-runner-app/src/main/resources/application.yml
@@ -39,7 +39,7 @@ swe-runner:
     parameters:
       ES_FR:
         min-value: 0
-        max-value: 6400
+        max-value: 3050
         precision: 50
         tolerance-Es-Fr: 10
         tolerance-Es-Pt: 50
@@ -65,10 +65,11 @@ swe-runner:
     - http://localhost:9000/
     - http://minio:9000/
     - file:/
+    - http://172.17.0.1:9000/
 
 rao-runner-server:
   amqp:
-    client-app-id: swe-runner
+    client-app-id: swe-d2cc-runner
     queue-name: rao-request-queue
 
 minio-adapter:
@@ -76,4 +77,4 @@ minio-adapter:
   base-path: /SWE/D2CC
   access-key: gridcapa
   secret-key: gridcapa
-  url: http://localhost:9000
+  url: http://172.17.0.1:9000/
