Implement soft interruption feature

--- a/gridcapa-swe-runner-app/src/main/resources/application.yml
+++ b/gridcapa-swe-runner-app/src/main/resources/application.yml
@@ -10,12 +10,12 @@ spring:
       reply-timeout: 7200000
   cloud:
     function:
-      definition: request;interrupt
+      definition: request;softInterrupt
     stream:
       default:
         binder: rabbit
       bindings:
-        interrupt-in-0:
+        softInterrupt-in-0:
           destination: swe-d2cc-stop-task
         request-in-0:
           destination: swe-d2cc-request
