--- a/pom.xml
+++ b/pom.xml
@@ -57,8 +57,8 @@
 
     <properties>
         <awaitility.version>3.0.0</awaitility.version>
-        <farao.dependencies.version>1.20.1-SNAPSHOT</farao.dependencies.version>
-        <farao.dichotomy.version>4.13.0</farao.dichotomy.version>
+        <farao.dependencies.version>1.21.0</farao.dependencies.version>
+        <farao.dichotomy.version>4.13.1-SNAPSHOT</farao.dichotomy.version>
         <gridcapa.starter.minio.version>1.1.0</gridcapa.starter.minio.version>
         <gridcapa.rao.runner.version>1.17.1</gridcapa.rao.runner.version>
         <gridcapa.task-manager.version>1.21.0</gridcapa.task-manager.version>
@@ -106,6 +106,11 @@
                 <groupId>com.github.jasminb</groupId>
                 <artifactId>jsonapi-converter</artifactId>
                 <version>${jsonapi.converter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-cgmes-extensions</artifactId>
+                <version>6.0.1</version>
             </dependency>
 
             <!-- Runtime dependencies -->
